Arquivos iniciais da Landing Page

--- a/public/index.html
+++ b/public/index.html
@@ -5,39 +5,46 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" type="image/png" />
+    <title>Zé Porteiro</title>
   </head>
+
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    <nav class="menu-div-master">
+        <div class="container-menu">
+            <div class="">
+                <img id="logoZe" src="./assets/logoUm.png" alt="Logo">
+            </div>
+            <div class="menusNav">
+                <span id="paginaInicial" class="fontNav"><a href="http://">Página Inicial</a></span>
+                <span id="sobreNos" class="fontNav"><a href="http://">Sobre Nós</a></span>
+                <span id="contatoId" class="fontNav"><a href="http://">Contato</a></span>
+            </div>
+            <div class="div-btns-logins">
+                <button class="btnCadastrar">Cadastrar</button>
+                <button class="btnLogin">Fazer Login</button>
+            </div>
+        </div>
+    </nav>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+    <section class="sectionHome">
+        <div class="textosHome">
+            <div class="divSubtituloHome">
+                <h1 id="tituloHome">O seu parceiro na <br>
+                gestão de encomendas</h1>
+                <br>
+                <h2 id="subtituloHome">Oferecemos uma solução tecnológica inovadora para simplificar a gestão de encomendas
+                em condomínios, visando proporcionar eficiência e comodidade aos moradores.</h2>
+                <br>
+                <button id="btnContrate">Contrate agora</button>
+            </div>
+        </div>
+        <div class="divFotoHome">
+            <img id="fotoHome" src="./assets/imgMen.png" alt="fotoEntregador">
+        </div>
+    </section>
+</body>
+<div id="root"></div>
 </html>
