atualizando os arquivos

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -11,40 +11,6 @@
     <title>Zé Porteiro</title>
   </head>
 
-  <body>
-    <nav class="menu-div-master">
-        <div class="container-menu">
-            <div class="">
-                <img id="logoZe" src="./assets/logoUm.png" alt="Logo">
-            </div>
-            <div class="menusNav">
-                <span id="paginaInicial" class="fontNav"><a href="http://">Página Inicial</a></span>
-                <span id="sobreNos" class="fontNav"><a href="http://">Sobre Nós</a></span>
-                <span id="contatoId" class="fontNav"><a href="http://">Contato</a></span>
-            </div>
-            <div class="div-btns-logins">
-                <button class="btnCadastrar">Cadastrar</button>
-                <button class="btnLogin">Fazer Login</button>
-            </div>
-        </div>
-    </nav>
-
-    <section class="sectionHome">
-        <div class="textosHome">
-            <div class="divSubtituloHome">
-                <h1 id="tituloHome">O seu parceiro na <br>
-                gestão de encomendas</h1>
-                <br>
-                <h2 id="subtituloHome">Oferecemos uma solução tecnológica inovadora para simplificar a gestão de encomendas
-                em condomínios, visando proporcionar eficiência e comodidade aos moradores.</h2>
-                <br>
-                <button id="btnContrate">Contrate agora</button>
-            </div>
-        </div>
-        <div class="divFotoHome">
-            <img id="fotoHome" src="./assets/imgMen.png" alt="fotoEntregador">
-        </div>
-    </section>
-</body>
-<div id="root"></div>
+  <body></body>
+  <div id="root"></div>
 </html>
